--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ PREVIEW_CHANNEL_ID=@uzbekchakinolar60
 # Admin telefon raqamlari (vergul bilan ajrating)
 # Masalan: +998901112233,+998331234567
 ADMIN_PHONES=+998330437375
+SUPER_ADMIN_ID=6470924459
